--- a/packages/theme-default/src/index.css
+++ b/packages/theme-default/src/index.css
@@ -29,6 +29,7 @@
 @import "./popover.css";
 @import "./tooltip.css";
 @import "./message-box.css";
+@import "./eg-dialog.css";
 @import "./breadcrumb.css";
 @import "./breadcrumb-item.css";
 @import "./form.css";
