--- a/packages/theme-default/src/form.css
+++ b/packages/theme-default/src/form.css
@@ -3,6 +3,12 @@
 
 @component-namespace el {
   @b form {
+    & .el-item-top .el-form-item__label{
+      float: none;
+      display: inline-block;
+      text-align: left;
+      padding: 0 0 10px 0;
+    }
     @m label-left {
       & .el-form-item__label {
         text-align: left;
@@ -14,6 +20,11 @@
         display: inline-block;
         text-align: left;
         padding: 0 0 10px 0;
+      }
+      & .el-item-right .el-form-item__label {
+          float: left;
+          text-align: right;
+          padding: 11px 12px 11px 0;
       }
     }
     @m inline {
