--- a/packages/theme-default/src/select.css
+++ b/packages/theme-default/src/select.css
@@ -45,7 +45,7 @@
         @when show-close {
           transition: 0s;
           size: 16px;
-          font-size: var(--select-font-size);
+          font-size: 20px;
           right: 8px;
           text-align: center;
           transform: translateY(-50%) rotateZ(180deg);
@@ -97,7 +97,7 @@
       right: 25px;
       color: var(--select-input-color);
       line-height: 18px;
-      font-size: var(--select-input-font-size);
+      font-size: 20px;
 
       &:hover {
         color: var(--select-close-hover-color);
