--- a/packages/theme-chalk/src/icon.scss
+++ b/packages/theme-chalk/src/icon.scss
@@ -69,6 +69,17 @@
 .el-icon-setting:before { content: "\e6ac"; }
 .el-icon-upload2:before { content: "\e6a3"; }
 // .:before { content: ; }
+.el-icon-arrow-down:before { content: "\e695"; }
+.el-icon-arrow-left:before { content: "\e697"; }
+.el-icon-arrow-right:before { content: "\e698"; }
+.el-icon-arrow-up:before { content: "\e699"; }
+
+.el-icon-chevron-left:before { content: "\e62c"; }
+.el-icon-chevron-right:before { content: "\e62d"; }
+.el-icon-chevron-up:before { content: "\e62e"; }
+.el-icon-chevron-down:before { content: "\e62b"; }
+
+
 
 .el-icon-lianglan:before { content: "\e915"; }
 
@@ -176,13 +187,6 @@
 
 .el-icon-arrow-circle-up:before { content: "\e62a"; }
 
-.el-icon-arrow-down:before { content: "\e62b"; }
-
-.el-icon-arrow-left:before { content: "\e62c"; }
-
-.el-icon-arrow-right:before { content: "\e62d"; }
-
-.el-icon-arrow-up:before { content: "\e62e"; }
 
 .el-icon-arrows-alt:before { content: "\e62f"; }
 
@@ -390,15 +394,10 @@
 
 .el-icon-chevron-circle-right:before { content: "\e694"; }
 
-.el-icon-chevron-down:before { content: "\e695"; }
+
 
 .el-icon-chevron-circle-up:before { content: "\e696"; }
 
-.el-icon-chevron-left:before { content: "\e697"; }
-
-.el-icon-chevron-right:before { content: "\e698"; }
-
-.el-icon-chevron-up:before { content: "\e699"; }
 
 .el-icon-child:before { content: "\e69a"; }
 
