--- a/packages/theme-chalk/src/cascader.scss
+++ b/packages/theme-chalk/src/cascader.scss
@@ -128,7 +128,7 @@
     @include m(extensible) {
       &:after {
         font-family: 'element-icons';
-        content: "\e604";
+        content: "\e61e";
         font-size: 14px;
         color: rgb(191, 203, 217);
         position: absolute;
