--- a/packages/theme-chalk/src/icon.scss
+++ b/packages/theme-chalk/src/icon.scss
@@ -69,17 +69,15 @@
 .el-icon-setting:before { content: "\e6ac"; }
 .el-icon-upload2:before { content: "\e6a3"; }
 // .:before { content: ; }
-.el-icon-arrow-down:before { content: "\e695"; }
-.el-icon-arrow-left:before { content: "\e697"; }
-.el-icon-arrow-right:before { content: "\e698"; }
-.el-icon-arrow-up:before { content: "\e699"; }
+.el-icon-arrow-down:before { content: "\e61c"; }
+.el-icon-arrow-left:before { content: "\e61d"; }
+.el-icon-arrow-right:before { content: "\e61e"; }
+.el-icon-arrow-up:before { content: "\e61f"; }
 
-.el-icon-chevron-left:before { content: "\e62c"; }
-.el-icon-chevron-right:before { content: "\e62d"; }
-.el-icon-chevron-up:before { content: "\e62e"; }
-.el-icon-chevron-down:before { content: "\e62b"; }
-
-
+.el-icon-angle-down:before { content: "\e62b"; }
+.el-icon-angle-left:before { content: "\e62c"; }
+.el-icon-angle-right:before { content: "\e62d"; }
+.el-icon-angle-up:before { content: "\e62e"; }
 
 .el-icon-lianglan:before { content: "\e915"; }
 
@@ -157,13 +155,7 @@
 
 .el-icon-angle-double-up:before { content: "\e61b"; }
 
-.el-icon-angle-down:before { content: "\e61c"; }
 
-.el-icon-angle-left:before { content: "\e61d"; }
-
-.el-icon-angle-right:before { content: "\e61e"; }
-
-.el-icon-angle-up:before { content: "\e61f"; }
 
 .el-icon-apple:before { content: "\e620"; }
 
@@ -394,10 +386,15 @@
 
 .el-icon-chevron-circle-right:before { content: "\e694"; }
 
-
+.el-icon-chevron-down:before { content: "\e695"; }
 
 .el-icon-chevron-circle-up:before { content: "\e696"; }
 
+.el-icon-chevron-left:before { content: "\e697"; }
+
+.el-icon-chevron-right:before { content: "\e698"; }
+
+.el-icon-chevron-up:before { content: "\e699"; }
 
 .el-icon-child:before { content: "\e69a"; }
 
