--- a/packages/theme-chalk/src/dialog.scss
+++ b/packages/theme-chalk/src/dialog.scss
@@ -82,6 +82,7 @@
   }
 
   @include e(body) {
+    height: 100%;
     padding: 30px 20px;
     color: $--color-text-regular;
     line-height: $--dialog-line-height;
@@ -95,6 +96,7 @@
     padding-top: 10px;
     text-align: right;
     box-sizing: border-box;
+    text-align: left;
   }
 
   // 内容居中布局
