--- a/packages/theme-chalk/src/dialog.scss
+++ b/packages/theme-chalk/src/dialog.scss
@@ -96,7 +96,7 @@
     padding-top: 10px;
     text-align: right;
     box-sizing: border-box;
-    text-align: left;
+    text-align: right;
   }
 
   // 内容居中布局
