前面一堆修改的提交,table组件查询条件问题修复

--- a/packages/theme-chalk/src/icon.scss
+++ b/packages/theme-chalk/src/icon.scss
@@ -79,6 +79,45 @@
 .el-icon-angle-right:before { content: "\e62d"; }
 .el-icon-angle-up:before { content: "\e62e"; }
 
+
+
+/* iconfont文件icon */
+.el-icon-filter1:before { content: "\e930"; }
+
+.el-icon-toright:before { content: "\e92f"; }
+
+.el-icon-SHARE:before { content: "\e928"; }
+
+.el-icon-zhuanfa:before { content: "\e92a"; }
+
+.el-icon-zhuanfa1:before { content: "\e92b"; }
+
+.el-icon-zhuanfa2:before { content: "\e92d"; }
+
+.el-icon-zhuanfa3:before { content: "\e92e"; }
+
+.el-icon-delete:before { content: "\e924"; }
+
+.el-icon-delete1:before { content: "\e927"; }
+
+.el-icon-delete2:before { content: "\e929"; }
+
+.el-icon-dazhuanfa:before { content: "\e92c"; }
+
+.el-icon-share1:before { content: "\e926"; }
+
+.el-icon-2101fenxiang:before { content: "\e925"; }
+
+.el-icon-circle-check:before { content: "\e68e"; }
+
+.el-icon-dagou:before { content: "\e921"; }
+
+.el-icon-time1:before { content: "\e922"; }
+
+.el-icon-time2:before { content: "\e923"; }
+
+.el-icon-document:before { content: "\e6d3"; }
+
 .el-icon-lianglan:before { content: "\e915"; }
 
 .el-icon-yilan:before { content: "\e916"; }
@@ -86,6 +125,8 @@
 .el-icon-sanlan:before { content: "\e917"; }
 
 .el-icon-sanliebuju:before { content: "\e919"; }
+
+.el-icon-siliebuju:before { content: "\e600"; }
 
 .el-icon-liangliebuju:before { content: "\e918"; }
 
@@ -155,8 +196,6 @@
 
 .el-icon-angle-double-up:before { content: "\e61b"; }
 
-
-
 .el-icon-apple:before { content: "\e620"; }
 
 .el-icon-archive:before { content: "\e621"; }
@@ -178,7 +217,6 @@
 .el-icon-arrow-circle-right:before { content: "\e629"; }
 
 .el-icon-arrow-circle-up:before { content: "\e62a"; }
-
 
 .el-icon-arrows-alt:before { content: "\e62f"; }
 
