--- a/packages/theme-chalk/src/table.scss
+++ b/packages/theme-chalk/src/table.scss
@@ -350,6 +350,11 @@
       left: auto;
       right: 0;
     }
+    @include when(bottom-border-hide) {
+      &::before {
+        display: none;
+      }
+    }
   }
 
   @include e(fixed-header-wrapper) {
