--- a/packages/theme-chalk/src/dialog.scss
+++ b/packages/theme-chalk/src/dialog.scss
@@ -11,7 +11,7 @@
   border-radius: $--border-radius-small;
   box-shadow: $--dialog-box-shadow;
   box-sizing: border-box;
-  max-width: 100%;
+  max-width: calc(100% - 20px);
   overflow: hidden;
   // width: 50%;
   text-align: left;
@@ -96,7 +96,6 @@
     padding-top: 10px;
     text-align: right;
     box-sizing: border-box;
-    text-align: right;
   }
 
   // 内容居中布局
