--- a/packages/theme-chalk/src/select-dropdown.scss
+++ b/packages/theme-chalk/src/select-dropdown.scss
@@ -25,7 +25,7 @@
         position: absolute;
         right: 20px;
         font-family: 'element-icons';
-        content: "\E611";
+        content: "\e68c";
         font-size: 12px;
         font-weight: bold;
         -webkit-font-smoothing: antialiased;
