--- a/packages/theme-chalk/src/input.scss
+++ b/packages/theme-chalk/src/input.scss
@@ -301,6 +301,10 @@
   }
 }
 
+.tooltip-use-in-form {
+  max-width: 500px;
+}
+
 /** disalbe default clear on IE */
 .el-input__inner::-ms-clear {
   display: none;
