--- a/packages/theme-chalk/src/common/var.scss
+++ b/packages/theme-chalk/src/common/var.scss
@@ -551,6 +551,8 @@ $--tag-danger-color: $--color-danger !default;
 /* Tree
 -------------------------- */
 $--tree-node-hover-color: $--background-color-base !default;
+$--tree-node-hover-background-color: $--background-color-base !default;
+$--tree-font-color: $--color-text-regular !default;
 $--tree-text-color: $--color-text-regular !default;
 $--tree-expand-icon-color: $--color-text-placeholder !default;
 
