--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -59,6 +59,7 @@
 @import "./collapse-item.scss";
 @import "./calendar.scss";
 @import "./cascader.scss";
+@import "./cascader-panel.scss";
 @import "./color-picker.scss";
 @import "./transfer.scss";
 @import "./container.scss";
