table添加树形数据以及懒加载,tableprops还需要处理暂时不发布

--- a/packages/theme-chalk/src/table.scss
+++ b/packages/theme-chalk/src/table.scss
@@ -572,4 +572,15 @@
       overflow: hidden;
     }
   }
+  [class*=el-table__row--level] {
+    .el-table__expand-icon {
+      display: inline-block;
+      line-height: 20px;
+      height: 20px;
+      text-align: center;
+      width: 14px;
+      vertical-align: middle;
+      margin-right: 5px;
+    }
+  }
 }
