--- a/packages/theme-default/src/table.css
+++ b/packages/theme-default/src/table.css
@@ -5,7 +5,6 @@
 
 
 
-
 @component-namespace el {
   @b table {
     position: relative;
@@ -471,5 +470,21 @@
         overflow: hidden;
       }
     }
+  }
+  [class*=el-table__row--level] {
+    .el-table__expand-icon {
+      display: inline-block;
+      width: 14px;
+      vertical-align: middle;
+      margin-right: 5px;
+    }
+  }
+  .el-table [class*=el-table__row--level] .el-table__expand-icon {
+    display: inline-block;
+    width: 20px;
+    line-height: 20px;
+    height: 20px;
+    text-align: center;
+    margin-right: 3px;
   }
 }
