--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -70,4 +70,5 @@
 @import "./drawer.scss";
 @import "./image.scss";
 @import "./divider.scss";
+@import "./eg-dialog.scss";
 @import "./custom.scss";
