--- a/packages/theme-chalk/src/tree.scss
+++ b/packages/theme-chalk/src/tree.scss
@@ -121,3 +121,7 @@
 .el-tree--highlight-current .el-tree-node.is-current > .el-tree-node__content {
   background-color: mix($--color-white, $--color-primary, 92%);
 }
+
+// .is-expand-dblclick .el-tree-node__label {
+//   user-select: none;
+// }
