时间选择控件时间选择器支持小时,小时分,小时分秒选择

--- a/packages/theme-chalk/src/date-picker/time-picker.scss
+++ b/packages/theme-chalk/src/date-picker/time-picker.scss
@@ -54,6 +54,15 @@
         padding-left: calc(100% / 3);
       }
     }
+    &.no-minutes {
+      &::after {
+        left: 100%;
+      }
+
+      &::before {
+        padding-left: 100%;
+      }
+    }
   }
 
   @include e(footer) {
