timeline从2.7版本迁移过来

--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -70,5 +70,7 @@
 @import "./drawer.scss";
 @import "./image.scss";
 @import "./divider.scss";
+@import "./timeline.scss";
+@import "./timeline-item.scss";
 @import "./eg-dialog.scss";
 @import "./custom.scss";
