upload-dragger__list 样式update

--- a/packages/theme-chalk/src/upload.scss
+++ b/packages/theme-chalk/src/upload.scss
@@ -607,8 +607,8 @@
   min-height: 180px;
   min-width: 360px;
   max-width: 100%;
-  // height: auto;
-  // width: auto;
+  height: auto;
+  width: auto;
   overflow: visible;
   padding: 0px 5px;
   box-sizing: border-box;
